proxy_apps/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
spec:
  ports:
    - port: 9443
  type: ExternalName
  externalName: 192.168.0.80
