proxy_apps/portainer/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.portainer.local.bruol.tech`)
      kind: Rule
      services:
        - name: portainer-service
          port: 9443
          scheme: https
    - match: Host(`portainer.local.bruol.tech`)
      kind: Rule
      services:
        - name: portainer-service
          port: 9443
          scheme: https
  tls:
    secretName: local-bruol-tech-tls
